k8s-manifests/postgresql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    name: postgresql
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: postgres:17.2
        imagePullPolicy: Always
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: storage
          mountPath: /var/lib/postgresql/data
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d/
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: postgresql
      - name: init-scripts
        configMap:
          name: postgresql
          items:
            - key: init.sh
              path: init.sh
