k8s-manifests/dex.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: dex
spec:
  type: ClusterIP
  ports:
  - port: 5556
    name: dex
  - port: 5557
    name: grpc
  selector:
    app: dex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: dex
   annotations:
     cert-manager.io/cluster-issuer: intermediate-ca1-issuer
     cert-manager.io/common-name: "IMMUNOODLE_HOSTNAME"
     kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - path: /dex
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              number: 5556
  tls:
  - hosts:
    - IMMUNOODLE_HOSTNAME
    secretName: cert-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dex
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: dexidp/dex:v2.44.0-alpine
        imagePullPolicy: Always
        name: dex
        ports:
        - containerPort: 5556
          name: dex
        - containerPort: 5557
          name: grpc
        volumeMounts:
        - name: dex-config
          mountPath: /etc/dex/config.docker.yaml
          subPath: config.yml
        - name: storage
          mountPath: /var/dex
      volumes:
      - name: dex-config
        secret:
          secretName: dex
      - name: storage
        persistentVolumeClaim:
          claimName: dex
---
apiVersion: v1
kind: Service
metadata:
  name: dex-account
  labels:
    app: dex-account
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: dex-account
  selector:
    app: dex-account
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-account
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: dex-account-stripprefix@file
    cert-manager.io/cluster-issuer: intermediate-ca1-issuer
    cert-manager.io/common-name: "IMMUNOODLE_HOSTNAME"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - path: /dex/account
        pathType: Prefix
        backend:
          service:
            name: dex-account
            port:
              number: 8080
  tls:
  - hosts:
    - IMMUNOODLE_HOSTNAME
    secretName: cert-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-account
  labels:
    app: dex-account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-account
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dex-account
    spec:
      containers:
      - image: ghcr.io/immunoodle/signup:main
        imagePullPolicy: Always
        name: dex-account
        ports:
        - containerPort: 8080
          name: dex-account
