k8s-manifests/whoami.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "false"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: whoamiStickyCookie
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: oauth2-proxy
      port: 8080
      targetPort: 8080
  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: intermediate-ca1-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/whoami"
        backend:
          service:
            name: whoami
            port:
              number: 8080
  tls:
  - hosts:
    - IMMUNOPLEX_HOSTNAME
    secretName: cert-secret
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - name: web
          containerPort: 80
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.8.1
        ports:
        - containerPort: 8080
          name: oauth2-proxy
